k8s/ingress/k8s-playground-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-playground-lb
spec:
  type: NodePort
  selector:
    tier: web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
