k8s/ingress/k8s-playground-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  backend:
    serviceName: k8s-playground-lb
    servicePort: 80
